--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.mvc.view.enabled=true
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=springbootdoctor@gmail.com
+spring.mail.password=zmrlkuhixurpomct
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
